--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,13 +6,13 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="22" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/MyMaterialTheme" >
         <activity
             android:name="com.tonycube.demo.navigationdrawerdemo.MainActivity"
             android:label="@string/app_name" >
